feat: hero and services done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
+//sections
 import HeroSection from "../widgets/hero/hero-section.astro";
+import ServicesSection from "../widgets/services/services-section.astro";
+import AboutSection from "../widgets/about/about-section.astro";
 ---
 
 <Layout>
 	<HeroSection />
+	<ServicesSection />
+	<AboutSection />
 </Layout>
