--- a/src/features/services/ui/service-card/service-card.astro
+++ b/src/features/services/ui/service-card/service-card.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
-import Button from "../../../shared/ui/button/button.astro";
+import Button from "../../../../shared/ui/button/button.astro";
 
 interface Props {
     title: string;
     description: string;
-    image: ImageMetadata;
+    image: string;
     index: number;
 }
 
@@ -34,12 +34,10 @@ const { title, description, image, index } = Astro.props;
         {description}
     </p>
 
-    <div class="w-full h-[159px] rounded-[12px] mt-4 relative z-10">
-        <Image
-            src={image}
-            alt={`Service ${title}`}
-            class="w-full h-full object-cover absolute rounded-[12px]"
-        />
+    <div
+        class="relative w-full h-auto bg-cover bg-center rounded-[12px] mt-4"
+        style={`background-image: url(${image}); padding-bottom: 56.25%;`}
+    >
     </div>
 
     <Button
