--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,14 @@ import Layout from "../layouts/Layout.astro";
 import HeroSection from "../widgets/hero/hero-section.astro";
 import ServicesSection from "../widgets/services/services-section.astro";
 import AboutSection from "../widgets/about/about-section.astro";
+import PriceSection from "../widgets/price/price-section.astro";
+import PortfolioSection from "../widgets/portfolio/portfolio-section.astro";
 ---
 
 <Layout>
 	<HeroSection />
 	<ServicesSection />
 	<AboutSection />
+	<PriceSection />
+	<PortfolioSection />
 </Layout>
