--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -7,7 +7,7 @@ import { services } from "../../features/services/model/services";
 ---
 
 <section
-    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[252px]"
+    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto pt-[252px]"
 >
     <Heading level={2} text="// Услуги" />
     <Paragraph
