--- a/src/widgets/price/price-section.astro
+++ b/src/widgets/price/price-section.astro
@@ -7,7 +7,7 @@ import { mockData } from "../../features/price/lib/mock-data";
 ---
 
 <section
-    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-96"
+    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px]"
 >
     <Heading level={4} text="// Прайс-лист" />
     <Paragraph
