--- a/src/shared/ui/paragraph/paragraph.astro
+++ b/src/shared/ui/paragraph/paragraph.astro
@@ -16,10 +16,10 @@ const {
 
 <p
     class:list={[
-        "font-mont-alter leading-6",
+        "font-mont-alter",
         variant === "hero"
-            ? "font-[300] text-[15px] text-white"
-            : "font-[400] text-secondary text-[20px]",
+            ? "font-[300] text-[15px] sm:text-[20px] text-white leading-6 sm:leading-7"
+            : "font-[400] text-secondary text-[20px] sm:text-[24px] leading-6 sm:leading-8",
         align === "left" ? "text-left" : "text-center",
         className,
     ]}
