--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -60,13 +60,21 @@ import BackgroundVideo from "/public/videos/video.mp4";
         >
             <Header client:load />
             <h1 class="flex items-center flex-col mt-[128px]">
-                <Image src={Wrap} alt="Wrap" class="w-[240px]" />
-                <Image src={Studio} alt="Studio" class="w-[240px] mt-4" />
+                <Image
+                    src={Wrap}
+                    alt="Wrap"
+                    class="w-[240px] sm:w-[300px] md:w-[340px]"
+                />
+                <Image
+                    src={Studio}
+                    alt="Studio"
+                    class="w-[240px] sm:w-[300px] md:w-[340px] mt-4"
+                />
             </h1>
             <Paragraph
                 variant="hero"
                 text="Wrap Studio: защита вашего авто на годы. Полиуретановая пленка — броня от царапин, сколов и времени. Сохраняем идеальный вид, подчеркиваем стиль. Ваш автомобиль в надежных руках."
-                className="mt-4"
+                className="mt-4 sm:mt-8 sm: w-[80%] md:w-[60%]"
             />
             <Button
                 text={"Связаться с нами".toUpperCase()}
