--- a/src/widgets/portfolio/portfolio-section.astro
+++ b/src/widgets/portfolio/portfolio-section.astro
@@ -14,7 +14,7 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
     <Paragraph
         text="Оклейте авто бронепленкой 1 раз и забудьте о сколах, царапинах и полировках на 7-10 лет!"
         variant="main"
-        className="mt-8 mb-8"
+        className="mt-8 mb-8 sm:w-[80%] md:w-[60%]"
     />
     {
         portfolioCards.map((card) => (
