--- a/src/widgets/price/price-section.astro
+++ b/src/widgets/price/price-section.astro
@@ -13,7 +13,7 @@ import { mockData } from "../../features/price/lib/mock-data";
     <Paragraph
         text="Защита и безупречный вид вашего автомобиля."
         variant="main"
-        className="mt-8 mb-8"
+        className="mt-8 mb-8 sm:w-[80%] md:w-[60%]"
     />
     {
         mockData.map((card) => (
