--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -13,7 +13,7 @@ import { services } from "../../features/services/model/services";
     <Paragraph
         text="Все, что нужно для защиты и безупречного вида вашего автомобиля."
         variant="main"
-        className="mt-8 mb-8"
+        className="mt-8 mb-8 sm:w-[80%] md:w-[60%]"
     />
     {
         services.map((service, index) => (
