--- a/src/features/price/ui/price-card/price-card.astro
+++ b/src/features/price/ui/price-card/price-card.astro
@@ -14,17 +14,17 @@ const { title, price, descriptors } = Astro.props;
 ---
 
 <div
-    class="w-full min-h-[610px] p-[20px] flex flex-col items-start border border-secondary-dark rounded-[12px] relative group hover:shadow-[0px_4px_128px_0px_#50C87840] transition-shadow duration-300 ease-in-out hover:border-primary"
+    class="w-full min-h-[610px] p-[20px] sm:p-[24px] md:p-[28px] flex flex-col items-start border border-secondary-dark rounded-[12px] relative group hover:shadow-[0px_4px_128px_0px_#50C87840] transition-shadow duration-300 ease-in-out hover:border-primary"
 >
     <span
-        class="absolute inset-0 flex items-center justify-center text-[128px] font-[400] text-[#50C87808] z-0 leading-[128px] text-center"
+        class="absolute inset-0 flex items-center justify-center text-[128px] sm:text-[148px] md:text-[168px] font-[400] text-[#50C87808] z-0 leading-[128px] sm:leading-[148px] md:leading-[168px] text-center"
         style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
     >
         WRAP STUDIO
     </span>
 
     <span
-        class="text-white font-gotham font-[400] text-[22px] leading-[37px] mb-4 group group-hover:text-primary transition-colors duration-300 ease-in-out"
+        class="text-white font-gotham font-[400] text-[22px] sm:text-[28px] md:text-[32px] leading-[37px] mb-4 group group-hover:text-primary transition-colors duration-300 ease-in-out"
     >
         {`${title}`.toUpperCase()}
     </span>
@@ -38,7 +38,7 @@ const { title, price, descriptors } = Astro.props;
                         alt="Tabler Wheel Icon"
                         class="self-start shrink-0"
                     />
-                    <span class="text-white font-mont-alter font-[600] text-[16px] leading-[37px] -mt-2 whitespace-pre-line">
+                    <span class="text-white font-mont-alter font-[600] text-[16px] sm:text-[18px] md:text-[20px] leading-[37px] -mt-2 whitespace-pre-line">
                         {descriptor}
                     </span>
                 </div>
@@ -50,7 +50,7 @@ const { title, price, descriptors } = Astro.props;
         class="mt-auto flex flex-row items-center flex-wrap justify-between w-full gap-2"
     >
         <span
-            class="text-primary font-[400] text-[50px]"
+            class="text-primary font-[400] text-[50px] sm:text-[64px] md:text-[72px]"
             style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
         >
             {price}
@@ -58,8 +58,8 @@ const { title, price, descriptors } = Astro.props;
         <Button
             variant="outline"
             text={`заказать`.toUpperCase()}
-            width="w-[150px]"
-            height="h-[40px]"
+            width="w-[150px] sm:w-[180px] md:w-[200px]"
+            height="h-[40px] sm:h-[45px] md:h-[50px]"
         />
     </div>
 </div>
