--- a/src/shared/ui/button/button.astro
+++ b/src/shared/ui/button/button.astro
@@ -14,8 +14,8 @@ const {
     href,
     className = "",
     variant = "default",
-    width = "w-[210px]",
-    height = "h-[50px]",
+    width = "w-[210px] sm:w-[240px]",
+    height = "h-[50px] sm:h-[55px]",
     onClick,
 } = Astro.props;
 ---
@@ -27,7 +27,7 @@ const {
             class:list={[
                 width,
                 height,
-                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px] bg-primary font-medium text-white text-[16px]",
+                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px] bg-primary font-medium text-white text-[16px] sm:text-[18px]",
                 className,
             ]}
         >
@@ -40,10 +40,10 @@ const {
                 height,
                 "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px]",
                 variant === "default"
-                    ? "bg-primary font-medium text-white text-[16px]"
+                    ? "bg-primary font-medium text-white text-[16px] sm:text-[18px]"
                     : variant === "outline"
-                      ? "bg-transparent border border-primary font-medium text-primary text-[16px]"
-                      : "font-medium text-secondary text-[16px]",
+                      ? "bg-transparent border border-primary font-medium text-primary text-[16px] sm:text-[18px]"
+                      : "font-medium text-secondary text-[16px] sm:text-[18px]",
                 className,
             ]}
         >
