--- a/src/widgets/about/about-section.astro
+++ b/src/widgets/about/about-section.astro
@@ -13,7 +13,7 @@ import { countUps } from "../../features/about/model/count-ups";
     <Paragraph
         text="Наш центр работает с материалами премиальных брендов и только с оригинальной продукцией. В их число входит: STEK, HOGOMAKU, LLUMAR."
         variant="main"
-        className="mt-8 mb-[64px]"
+        className="mt-8 mb-[64px] sm:w-[80%]"
     />
     <div class="flex flex-col md:flex-row items-center justify-center gap-8">
         {countUps.map((countUp) => <CountUp {...countUp} client:load />)}
