--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -10,7 +10,7 @@ import InstagramIcon from "/public/images/instagram-icon.svg";
     id="contacts"
 >
     <h6
-        class="text-white font-gotham font-[500] text-[44px] text-left uppercase"
+        class="text-white font-gotham font-[500] text-[44px] sm:text-[54px] md:text-[64px] text-left uppercase"
     >
         <span class="whitespace-nowrap">Свяжитесь</span>
         <br />
@@ -20,13 +20,13 @@ import InstagramIcon from "/public/images/instagram-icon.svg";
     <div class="flex flex-col items-center justify-center w-full mt-8">
         <a
             href="tel:+7 702 898 83 58"
-            class="font-mont-alter font-[400] text-[20px] text-center text-primary"
+            class="font-mont-alter font-[400] text-[20px] sm:text-[24px] md:text-[28px] text-center text-primary"
             >+7 702 898 83 58</a
         >
         <a
             href="https://2gis.kz/pavlodar/search/%D0%A3%D0%BB.%20%D0%BD%D1%83%D1%80%D0%BA%D0%B8%D0%BD%D0%B0%20104%2F1/geo/15622496862608837/76.963775%2C52.250869?m=76.963813%2C52.250887%2F17.59"
             target="_blank"
-            class="font-mont-alter font-[400] text-[20px] text-center text-primary uppercase mt-4"
+            class="font-mont-alter font-[400] text-[20px] sm:text-[24px] md:text-[28px] text-center text-primary uppercase mt-4"
             >Ул. нуркина 104/1</a
         >
         <a
