--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -36,5 +36,11 @@ import InstagramIcon from "/public/images/instagram-icon.svg";
         >
             <Image src={InstagramIcon} alt="Instagram Icon" />
         </a>
+        <a
+            href="https://sparkstudio.kz/"
+            target="_blank"
+            class="font-gotham text-[20px] sm:text-[24px] font-[400] md:text-[28px] text-center text-primary mt-16 mb-8"
+            >Developed by Spark Studio</a
+        >
     </div>
 </section>
