--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -13,7 +13,7 @@ import BackgroundVideo from "/public/videos/video.mp4";
     .video-section {
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: 100dvh;
         display: flex;
         overflow: hidden;
     }
@@ -58,8 +58,7 @@ import BackgroundVideo from "/public/videos/video.mp4";
         <div
             class="content max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] mx-auto flex flex-col items-center"
         >
-            <Header client:load />
-            <h1 class="flex items-center flex-col mt-[128px]">
+            <h1 class="flex items-center flex-col mt-[228px]">
                 <Image
                     src={Wrap}
                     alt="Wrap"
