feat: about section in progress

--- a/src/shared/ui/heading/heading.astro
+++ b/src/shared/ui/heading/heading.astro
@@ -14,7 +14,7 @@ const Tag = `h${level}`;
 
 <Tag
     class:list={[
-        `font-gotham ${"font-[400] text-[38px] sm:text-[48px] text-secondary"}`,
+        `font-gotham ${"font-[500] text-[38px] sm:text-[48px] xl:text-[64px] text-secondary"}`,
         className,
     ]}
 >
