--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -9,17 +9,46 @@ import { services } from "../../features/services/model/services";
 <section
     class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto pt-[64px]"
 >
-    <Heading level={2} text="// Услуги" />
-    <Paragraph
-        text="Все, что нужно для защиты и безупречного вида вашего автомобиля."
-        variant="main"
-        className="mt-8 mb-8 sm:w-[80%] md:w-[60%]"
-    />
+    <div
+        class="flex lg:flex-row flex-col items-center lg:items-start lg:justify-between w-full lg:mt-8 lg:mb-8"
+    >
+        <Heading level={2} text="// Услуги" />
+        <Paragraph
+            text="Все, что нужно для защиты и безупречного вида вашего автомобиля."
+            variant="main"
+            className="mt-8 mb-8 lg:mt-0 lg:mb-0 sm:w-[80%] md:w-[60%]"
+            align="lg:text-right text-center"
+        />
+    </div>
     {
         services.map((service, index) => (
-            <div class="flex flex-col items-center mb-8 last:mb-0 w-full">
+            <div class="flex flex-col items-center mb-8 last:mb-0 w-full lg:hidden">
                 <ServiceCard {...service} index={index} />
             </div>
         ))
     }
+    <div class="lg:grid hidden gap-4 grid-rows-2 w-full mt-16">
+        <div class="grid grid-cols-3 gap-4">
+            {
+                services
+                    .slice(0, 3)
+                    .map((service, index) => (
+                        <ServiceCard {...service} index={index} />
+                    ))
+            }
+        </div>
+        <div class="grid grid-cols-2 gap-4">
+            {
+                services
+                    .slice(3, 5)
+                    .map((service, index) => (
+                        <ServiceCard
+                            {...service}
+                            index={index + 3}
+                            className="col-span-1 w-full"
+                        />
+                    ))
+            }
+        </div>
+    </div>
 </section>
