feat: price section pc

--- a/src/shared/ui/button/button.astro
+++ b/src/shared/ui/button/button.astro
@@ -7,6 +7,7 @@ interface Props {
     width?: string;
     height?: string;
     onClick?: () => void;
+    fontSize?: string;
 }
 
 const {
@@ -17,6 +18,7 @@ const {
     width = "w-[210px] sm:w-[240px]",
     height = "h-[50px] sm:h-[55px]",
     onClick,
+    fontSize = "text-[16px] sm:text-[18px]",
 } = Astro.props;
 ---
 
@@ -38,13 +40,14 @@ const {
             class:list={[
                 width,
                 height,
-                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px]",
+                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px] transition-colors duration-300 ease-in-out",
                 variant === "default"
-                    ? "bg-primary font-medium text-white text-[16px] sm:text-[18px]"
+                    ? "bg-primary font-medium text-white hover:bg-transparent hover:border hover:border-primary"
                     : variant === "outline"
-                      ? "bg-transparent border border-primary font-medium text-primary text-[16px] sm:text-[18px]"
-                      : "font-medium text-secondary text-[16px] sm:text-[18px]",
+                      ? "bg-transparent border border-primary font-medium text-primary  hover:bg-primary hover:text-white"
+                      : "font-medium text-secondary ",
                 className,
+                fontSize,
             ]}
         >
             {text}
