--- a/src/features/price/ui/price-card/price-card.astro
+++ b/src/features/price/ui/price-card/price-card.astro
@@ -8,58 +8,66 @@ interface Props {
     title: string;
     price: string;
     descriptors: string[];
+    isExtended?: boolean;
 }
 
-const { title, price, descriptors } = Astro.props;
+const { title, price, descriptors, isExtended } = Astro.props;
 ---
 
 <div
-    class="w-full min-h-[610px] p-[20px] sm:p-[24px] md:p-[28px] flex flex-col items-start border border-secondary-dark rounded-[12px] relative group hover:shadow-[0px_4px_128px_0px_#50C87840] transition-shadow duration-300 ease-in-out hover:border-primary"
+    class={`${isExtended ? "flex flex-row items-start justify-between h-full" : "flex-col flex items-start lg:h-full min-h-[610px]"} w-full p-[20px] sm:p-[24px] md:p-[28px] lg:p-[20px] xl:p-[24px] 2xl:p-[28px] border border-secondary-dark rounded-[12px] relative group hover:shadow-[0px_4px_128px_0px_#50C87840] transition-shadow duration-300 ease-in-out hover:border-primary`}
 >
     <span
-        class="absolute inset-0 flex items-center justify-center text-[128px] sm:text-[148px] md:text-[168px] font-[400] text-[#50C87808] z-0 leading-[128px] sm:leading-[148px] md:leading-[168px] text-center"
+        class={`absolute inset-0 flex items-center justify-center ${isExtended ? "xl:text-[188px] 2xl:text-[208px]" : "text-[128px] sm:text-[148px] md:text-[148px] lg:text-[128px] 2xl:text-[168px] leading-[128px] sm:leading-[148px] md:leading-[168px] lg:leading-[128px] 2xl:leading-[168px]"} font-[400] text-[#50C87808] z-0 text-center`}
         style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
     >
         WRAP STUDIO
     </span>
+    <div>
+        <span
+            class={`text-white font-gotham font-[500] ${isExtended ? "xl:text-[38px] 2xl:text-[48px]" : "text-[22px] sm:text-[28px] md:text-[32px] lg:text-[22px] xl:text-[24px] 2xl:text-[32px]"} leading-[37px] mb-4 group group-hover:text-primary transition-colors duration-300 ease-in-out`}
+        >
+            {`${title}`.toUpperCase()}
+        </span>
 
-    <span
-        class="text-white font-gotham font-[400] text-[22px] sm:text-[28px] md:text-[32px] leading-[37px] mb-4 group group-hover:text-primary transition-colors duration-300 ease-in-out"
-    >
-        {`${title}`.toUpperCase()}
-    </span>
-
-    <div class="flex-grow flex flex-col gap-4">
-        {
-            descriptors.map((descriptor) => (
-                <div class="flex items-start gap-3">
-                    <Image
-                        src={TablerWheelIcon}
-                        alt="Tabler Wheel Icon"
-                        class="self-start shrink-0"
-                    />
-                    <span class="text-white font-mont-alter font-[600] text-[16px] sm:text-[18px] md:text-[20px] leading-[37px] -mt-2 whitespace-pre-line">
-                        {descriptor}
-                    </span>
-                </div>
-            ))
-        }
+        <div
+            class={`${isExtended ? "mt-8 grid grid-cols-3 xl:gap-x-4 2xl:gap-x-8 gap-y-4" : "flex-grow flex flex-col gap-4 mt-6 mb-4"}`}
+        >
+            {
+                descriptors.map((descriptor) => (
+                    <div class={`flex items-start gap-3`}>
+                        <Image
+                            src={TablerWheelIcon}
+                            alt="Tabler Wheel Icon"
+                            class="self-start shrink-0"
+                        />
+                        <span class="text-white font-mont-alter font-[600] text-[16px] sm:text-[18px] md:text-[20px] lg:text-[16px] 2xl:text-[20px] leading-[37px] -mt-2 whitespace-pre-line">
+                            {descriptor}
+                        </span>
+                    </div>
+                ))
+            }
+        </div>
     </div>
-
     <div
-        class="mt-auto flex flex-row items-center flex-wrap justify-between w-full gap-2"
+        class={`flex ${isExtended ? "flex-col flex items-end justify-between " : "flex-row flex-wrap justify-between w-full mt-auto gap-2 xl:gap-4 items-center"} z-20`}
     >
         <span
-            class="text-primary font-[400] text-[50px] sm:text-[64px] md:text-[72px]"
+            class={`text-primary font-[400] text-[50px] sm:text-[64px] md:text-[72px] lg:text-[50px] ${isExtended ? "xl:text-[54px] 2xl:text-[64px]" : ""} 2xl:text-[72px]`}
             style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
         >
             {price}
         </span>
-        <Button
-            variant="outline"
-            text={`заказать`.toUpperCase()}
-            width="w-[150px] sm:w-[180px] md:w-[200px]"
-            height="h-[40px] sm:h-[45px] md:h-[50px]"
-        />
+        <div
+            class={`${isExtended && "bottom-[24px] 2xl:bottom-[28px] absolute"} `}
+        >
+            <Button
+                variant="outline"
+                text={`заказать`.toUpperCase()}
+                width={`${isExtended ? "xl:w-[210px] 2xl:w-[220px]" : "w-[150px] sm:w-[180px] md:w-[200px] lg:w-[150px] "} `}
+                height={`${isExtended ? "xl:h-[50px] 2xl:h-[55px]" : "h-[40px] sm:h-[45px] md:h-[50px] lg:h-[40px]"} `}
+                fontSize={`${isExtended ? "xl:text-[16px]" : "lg:text-[14px]"}`}
+            />
+        </div>
     </div>
 </div>
