fix: hero heading optimized

--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -66,16 +66,22 @@ import BackgroundVideo from "/public/videos/video.mp4";
                     src={Wrap}
                     alt="Wrap"
                     class="w-[240px] sm:w-[300px] md:w-[340px] lg:hidden flex"
+                    loading="eager"
+                    decoding="async"
                 />
                 <Image
                     src={Studio}
                     alt="Studio"
                     class="w-[240px] sm:w-[300px] md:w-[340px] mt-4 lg:hidden flex"
+                    loading="eager"
+                    decoding="async"
                 />
                 <Image
                     src={LogoIconPc}
                     alt="Logo Icon"
                     class="hidden lg:flex"
+                    loading="eager"
+                    decoding="async"
                 />
             </h1>
             <Paragraph
