--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -1,8 +1,5 @@
 ---
-import { Image } from "astro:assets";
 import { Form } from "../../features/contacts/ui/form/form.tsx";
-
-import InstagramIcon from "/public/images/instagram-icon.svg";
 ---
 
 <section
@@ -34,7 +31,7 @@ import InstagramIcon from "/public/images/instagram-icon.svg";
             target="_blank"
             class="mt-4"
         >
-            <Image src={InstagramIcon} alt="Instagram Icon" />
+            <img src="/public/images/instagram-icon.svg" alt="Instagram Icon" />
         </a>
         <a
             href="https://sparkstudio.kz/"
