--- a/src/features/about/ui/about-tab/about-tab.astro
+++ b/src/features/about/ui/about-tab/about-tab.astro
@@ -1,8 +1,4 @@
 ---
-import { Image } from "astro:assets";
-
-import StarIcon from "/public/images/star-icon.svg";
-
 interface Props {
     label: string;
 }
@@ -11,7 +7,7 @@ const { label } = Astro.props;
 ---
 
 <div class="flex flex-row items-center gap-4">
-    <Image src={StarIcon} alt="Star Icon" />
+    <img src="/public/images/star-icon.svg" alt="Star Icon" />
     <span
         class="font-mont-alter text-white font-[500] lg:text-[16px] xl:text-[20px] 2xl:text-[24px] lg:leading-[24px] xl:leading-[32px] 2xl:leading-[40px] italic"
     >
