--- a/src/shared/ui/button/button.astro
+++ b/src/shared/ui/button/button.astro
@@ -29,7 +29,7 @@ const {
             class:list={[
                 width,
                 height,
-                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px] bg-primary font-medium text-white text-[16px] sm:text-[18px]",
+                "font-mont-alter flex items-center justify-center rounded-[32px] bg-primary font-medium text-white text-[16px] sm:text-[18px]",
                 className,
             ]}
         >
@@ -40,7 +40,7 @@ const {
             class:list={[
                 width,
                 height,
-                "font-mont-alter leading-[24px] flex items-center justify-center rounded-[32px] transition-colors duration-300 ease-in-out",
+                "font-mont-alter flex items-center justify-center rounded-[32px] transition-colors duration-300 ease-in-out",
                 variant === "default"
                     ? "bg-primary font-medium text-white hover:bg-transparent hover:border hover:border-primary"
                     : variant === "outline"
