--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -1,5 +1,7 @@
 ---
 import { Form } from "../../features/contacts/ui/form/form.tsx";
+
+import InstagramIcon from "/public/images/instagram-icon.svg";
 ---
 
 <section
@@ -31,7 +33,7 @@ import { Form } from "../../features/contacts/ui/form/form.tsx";
             target="_blank"
             class="mt-4"
         >
-            <img src="/public/images/instagram-icon.svg" alt="Instagram Icon" />
+            <img src={InstagramIcon.src} alt="Instagram Icon" />
         </a>
         <a
             href="https://sparkstudio.kz/"
