--- a/src/widgets/portfolio/portfolio-section.astro
+++ b/src/widgets/portfolio/portfolio-section.astro
@@ -8,20 +8,23 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
 ---
 
 <section
-    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px]"
+    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px] lg:mt-[128px]"
 >
-    <Heading level={5} text="// Портфолио" />
-    <Paragraph
-        text="Оклейте авто бронепленкой 1 раз и забудьте о сколах, царапинах и полировках на 7-10 лет!"
-        variant="main"
-        className="mt-8 mb-8 sm:w-[80%] md:w-[60%]"
-    />
-    {
-        portfolioCards.map((card) => (
-            <div class="flex flex-col items-center mb-12 last:mb-0 w-full">
-                <PortfolioCard {...card} client:load />
-            </div>
-        ))
-    }
+    <div
+        class="lg:flex lg:flex-row-reverse lg:justify-between lg:items-start w-full flex items-center justify-center flex-col"
+    >
+        <Heading level={5} text="// Портфолио" />
+        <Paragraph
+            text="Оклейте авто бронепленкой 1 раз и забудьте о сколах, царапинах и полировках на 7-10 лет!"
+            variant="main"
+            className="mt-8 mb-8 lg:mt-0 lg:mb-0 sm:w-[80%] md:w-[60%] lg:w-[50%]"
+            align="lg:text-left text-center"
+        />
+    </div>
+    <div
+        class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-16 items-center mt-8 mb-12 last:mb-0 w-full"
+    >
+        {portfolioCards.map((card) => <PortfolioCard {...card} client:load />)}
+    </div>
     <Button text={`Смотреть все`.toUpperCase()} variant="outline" />
 </section>
